Continued project, finished frontend now moving to back

--- a/src/scss/Layout.scss
+++ b/src/scss/Layout.scss
@@ -1,6 +1,8 @@
-.page{
+.page {
+  main {
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100vh;
+  }
 }
