--- a/src/scss/Header.scss
+++ b/src/scss/Header.scss
@@ -4,10 +4,10 @@
   align-items: center;
   justify-content: space-between;
   padding: 2.5rem 5rem 2.5rem;
-  background-color: #BCF1E0;
+  background-color: #bcf1e0;
   color: #fff;
 
-  &__logo{
+  &__logo {
     width: 10rem;
     border-radius: 100px;
   }
